--- a/src/modules/iekf/python/Measurement Jacobians.ipynb
+++ b/src/modules/iekf/python/Measurement Jacobians.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -81,7 +81,7 @@
        "_D  pos_N  pos_E  asl  terrainₐₛₗ  baro_bias  wind_N  wind_E  wind_D]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -171,7 +171,7 @@
        "_N) - C_nb(2, 0)⋅(2⋅rot_D⋅rot_N + 2⋅rot_E)⎠⎦"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -230,7 +230,7 @@
        "⎣                          -C_nb(2, 0)                           ⎦"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -315,7 +315,7 @@
        "C_nb(2, 2)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -344,7 +344,7 @@
        "C_nb(2, 2)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -371,7 +371,7 @@
        "_D  pos_N  pos_E  asl  terrainₐₛₗ  baro_bias  wind_N  wind_E  wind_D]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -449,14 +449,14 @@
    "source": [
     "v_ne_n = vel_N*frame_i.x + vel_E*frame_i.y\n",
     "y_flow = sympy.Matrix([\n",
-    "    d_eq*v_ne_n.dot(frame_b.y) + omega_b.dot(frame_b.x),\n",
-    "    d_eq*v_ne_n.dot(frame_b.x) + omega_b.dot(frame_b.y)\n",
+    "    v_ne_n.dot(frame_b.y)/d_eq + omega_b.dot(frame_b.x),\n",
+    "    v_ne_n.dot(frame_b.x)/d_eq + omega_b.dot(frame_b.y)\n",
     "    ]).subs(sub_C_nb)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -464,19 +464,19 @@
     {
      "data": {
       "text/latex": [
-       "$$\\left[\\begin{matrix}\\omega_{bx} + \\frac{agl}{C_{nb(2, 2)}} \\left(C_{nb(0, 1)} vel_{N} + C_{nb(1, 1)} vel_{E}\\right)\\\\\\omega_{by} + \\frac{agl}{C_{nb(2, 2)}} \\left(C_{nb(0, 0)} vel_{N} + C_{nb(1, 0)} vel_{E}\\right)\\end{matrix}\\right]$$"
+       "$$\\left[\\begin{matrix}\\frac{C_{nb(2, 2)}}{agl} \\left(C_{nb(0, 1)} vel_{N} + C_{nb(1, 1)} vel_{E}\\right) + \\omega_{bx}\\\\\\frac{C_{nb(2, 2)}}{agl} \\left(C_{nb(0, 0)} vel_{N} + C_{nb(1, 0)} vel_{E}\\right) + \\omega_{by}\\end{matrix}\\right]$$"
       ],
       "text/plain": [
-       "⎡       agl⋅(C_nb(0, 1)⋅vel_N + C_nb(1, 1)⋅vel_E)⎤\n",
-       "⎢ω_bx + ─────────────────────────────────────────⎥\n",
-       "⎢                       C_nb(2, 2)               ⎥\n",
-       "⎢                                                ⎥\n",
-       "⎢       agl⋅(C_nb(0, 0)⋅vel_N + C_nb(1, 0)⋅vel_E)⎥\n",
-       "⎢ω_by + ─────────────────────────────────────────⎥\n",
-       "⎣                       C_nb(2, 2)               ⎦"
+       "⎡C_nb(2, 2)⋅(C_nb(0, 1)⋅vel_N + C_nb(1, 1)⋅vel_E)       ⎤\n",
+       "⎢──────────────────────────────────────────────── + ω_bx⎥\n",
+       "⎢                      agl                              ⎥\n",
+       "⎢                                                       ⎥\n",
+       "⎢C_nb(2, 2)⋅(C_nb(0, 0)⋅vel_N + C_nb(1, 0)⋅vel_E)       ⎥\n",
+       "⎢──────────────────────────────────────────────── + ω_by⎥\n",
+       "⎣                      agl                              ⎦"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -497,36 +497,37 @@
      "output_type": "stream",
      "text": [
       "Matrix<float, Y_flow::n, Xe::n> H;\n",
-      "float x0 = 2*agl/C_nb(2, 2)**2;\n",
-      "float x1 = C_nb(2, 1)*C_nb(2, 2);\n",
-      "float x2 = C_nb(0, 1)*vel_N + C_nb(1, 1)*vel_E;\n",
-      "float x3 = 1/C_nb(2, 2);\n",
-      "float x4 = 2*agl*x3;\n",
-      "float x5 = agl*x3;\n",
-      "float x6 = x2*x3;\n",
-      "float x7 = C_nb(2, 0)*C_nb(2, 2);\n",
-      "float x8 = C_nb(0, 0)*vel_N + C_nb(1, 0)*vel_E;\n",
-      "float x9 = x3*x8;\n",
-      "H(Y_flow::flowX, Xe::rot_N) = -x0*(C_nb(1, 2)*x2 + vel_E*x1);\n",
-      "H(Y_flow::flowX, Xe::rot_E) = x0*(C_nb(0, 2)*x2 + vel_N*x1);\n",
+      "float x0 = 1/agl;\n",
+      "float x1 = 2*x0;\n",
+      "float x2 = C_nb(2, 1)*C_nb(2, 2);\n",
+      "float x3 = C_nb(0, 1)*vel_N + C_nb(1, 1)*vel_E;\n",
+      "float x4 = 2*C_nb(2, 2)*x0;\n",
+      "float x5 = C_nb(2, 2)*x0;\n",
+      "float x6 = C_nb(2, 2)/agl**2;\n",
+      "float x7 = x3*x6;\n",
+      "float x8 = C_nb(2, 0)*C_nb(2, 2);\n",
+      "float x9 = C_nb(0, 0)*vel_N + C_nb(1, 0)*vel_E;\n",
+      "float x10 = x6*x9;\n",
+      "H(Y_flow::flowX, Xe::rot_N) = x1*(C_nb(1, 2)*x3 - vel_E*x2);\n",
+      "H(Y_flow::flowX, Xe::rot_E) = x1*(-C_nb(0, 2)*x3 + vel_N*x2);\n",
       "H(Y_flow::flowX, Xe::rot_D) = x4*(C_nb(0, 1)*vel_E - C_nb(1, 1)*vel_N);\n",
       "H(Y_flow::flowX, Xe::vel_N) = C_nb(0, 1)*x5;\n",
       "H(Y_flow::flowX, Xe::vel_E) = C_nb(1, 1)*x5;\n",
       "H(Y_flow::flowX, Xe::gyro_bias_N) = -C_nb(0, 0);\n",
       "H(Y_flow::flowX, Xe::gyro_bias_E) = -C_nb(1, 0);\n",
       "H(Y_flow::flowX, Xe::gyro_bias_D) = -C_nb(2, 0);\n",
-      "H(Y_flow::flowX, Xe::asl) = x6;\n",
-      "H(Y_flow::flowX, Xe::terrain_asl) = -x6;\n",
-      "H(Y_flow::flowY, Xe::rot_N) = -x0*(C_nb(1, 2)*x8 + vel_E*x7);\n",
-      "H(Y_flow::flowY, Xe::rot_E) = x0*(C_nb(0, 2)*x8 + vel_N*x7);\n",
+      "H(Y_flow::flowX, Xe::asl) = -x7;\n",
+      "H(Y_flow::flowX, Xe::terrain_asl) = x7;\n",
+      "H(Y_flow::flowY, Xe::rot_N) = x1*(C_nb(1, 2)*x9 - vel_E*x8);\n",
+      "H(Y_flow::flowY, Xe::rot_E) = x1*(-C_nb(0, 2)*x9 + vel_N*x8);\n",
       "H(Y_flow::flowY, Xe::rot_D) = x4*(C_nb(0, 0)*vel_E - C_nb(1, 0)*vel_N);\n",
       "H(Y_flow::flowY, Xe::vel_N) = C_nb(0, 0)*x5;\n",
       "H(Y_flow::flowY, Xe::vel_E) = C_nb(1, 0)*x5;\n",
       "H(Y_flow::flowY, Xe::gyro_bias_N) = -C_nb(0, 1);\n",
       "H(Y_flow::flowY, Xe::gyro_bias_E) = -C_nb(1, 1);\n",
       "H(Y_flow::flowY, Xe::gyro_bias_D) = -C_nb(2, 1);\n",
-      "H(Y_flow::flowY, Xe::asl) = x9;\n",
-      "H(Y_flow::flowY, Xe::terrain_asl) = -x9;\n"
+      "H(Y_flow::flowY, Xe::asl) = -x10;\n",
+      "H(Y_flow::flowY, Xe::terrain_asl) = x10;\n"
      ]
     }
    ],
@@ -537,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -545,19 +546,19 @@
     {
      "data": {
       "text/latex": [
-       "$$\\left[\\begin{matrix}\\omega_{bx} + \\frac{agl}{C_{nb(2, 2)}} \\left(C_{nb(0, 1)} vel_{N} + C_{nb(1, 1)} vel_{E}\\right)\\\\\\omega_{by} + \\frac{agl}{C_{nb(2, 2)}} \\left(C_{nb(0, 0)} vel_{N} + C_{nb(1, 0)} vel_{E}\\right)\\end{matrix}\\right]$$"
+       "$$\\left[\\begin{matrix}\\frac{C_{nb(2, 2)}}{agl} \\left(C_{nb(0, 1)} vel_{N} + C_{nb(1, 1)} vel_{E}\\right) + \\omega_{bx}\\\\\\frac{C_{nb(2, 2)}}{agl} \\left(C_{nb(0, 0)} vel_{N} + C_{nb(1, 0)} vel_{E}\\right) + \\omega_{by}\\end{matrix}\\right]$$"
       ],
       "text/plain": [
-       "⎡       agl⋅(C_nb(0, 1)⋅vel_N + C_nb(1, 1)⋅vel_E)⎤\n",
-       "⎢ω_bx + ─────────────────────────────────────────⎥\n",
-       "⎢                       C_nb(2, 2)               ⎥\n",
-       "⎢                                                ⎥\n",
-       "⎢       agl⋅(C_nb(0, 0)⋅vel_N + C_nb(1, 0)⋅vel_E)⎥\n",
-       "⎢ω_by + ─────────────────────────────────────────⎥\n",
-       "⎣                       C_nb(2, 2)               ⎦"
+       "⎡C_nb(2, 2)⋅(C_nb(0, 1)⋅vel_N + C_nb(1, 1)⋅vel_E)       ⎤\n",
+       "⎢──────────────────────────────────────────────── + ω_bx⎥\n",
+       "⎢                      agl                              ⎥\n",
+       "⎢                                                       ⎥\n",
+       "⎢C_nb(2, 2)⋅(C_nb(0, 0)⋅vel_N + C_nb(1, 0)⋅vel_E)       ⎥\n",
+       "⎢──────────────────────────────────────────────── + ω_by⎥\n",
+       "⎣                      agl                              ⎦"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
