Optical flow working in sim.

--- a/src/modules/iekf/python/Measurement Jacobians.ipynb
+++ b/src/modules/iekf/python/Measurement Jacobians.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -81,7 +81,7 @@
        "_D  pos_N  pos_E  asl  terrainₐₛₗ  baro_bias  wind_N  wind_E  wind_D]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -171,7 +171,7 @@
        "_N) - C_nb(2, 0)⋅(2⋅rot_D⋅rot_N + 2⋅rot_E)⎠⎦"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -230,7 +230,7 @@
        "⎣                          -C_nb(2, 0)                           ⎦"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -315,7 +315,7 @@
        "C_nb(2, 2)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -344,7 +344,7 @@
        "C_nb(2, 2)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -371,7 +371,7 @@
        "_D  pos_N  pos_E  asl  terrainₐₛₗ  baro_bias  wind_N  wind_E  wind_D]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -429,34 +429,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "v_ne_n = vel_N*frame_i.x + vel_E*frame_i.y\n",
-    "flow = d_eq*v_ne_n + omega_b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "v_ne_n = vel_N*frame_i.x + vel_E*frame_i.y\n",
+    "vel_f_b = -vel_i - omega_b.cross(d_eq*frame_b.z)\n",
     "y_flow = sympy.Matrix([\n",
-    "    v_ne_n.dot(frame_b.y)/d_eq + omega_b.dot(frame_b.x),\n",
-    "    v_ne_n.dot(frame_b.x)/d_eq + omega_b.dot(frame_b.y)\n",
+    "    vel_f_b.dot(frame_b.y)/d_eq,\n",
+    "    vel_f_b.dot(frame_b.x)/d_eq,\n",
     "    ]).subs(sub_C_nb)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -464,30 +452,40 @@
     {
      "data": {
       "text/latex": [
-       "$$\\left[\\begin{matrix}\\frac{C_{nb(2, 2)}}{agl} \\left(C_{nb(0, 1)} vel_{N} + C_{nb(1, 1)} vel_{E}\\right) + \\omega_{bx}\\\\\\frac{C_{nb(2, 2)}}{agl} \\left(C_{nb(0, 0)} vel_{N} + C_{nb(1, 0)} vel_{E}\\right) + \\omega_{by}\\end{matrix}\\right]$$"
+       "$$\\left[\\begin{matrix}\\frac{1}{agl} \\left(- C_{nb(2, 2)} \\left(C_{nb(0, 1)} vel_{N} + C_{nb(1, 1)} vel_{E} + C_{nb(2, 1)} vel_{D}\\right) + agl \\omega_{bx}\\right)\\\\- \\frac{1}{agl} \\left(C_{nb(2, 2)} \\left(C_{nb(0, 0)} vel_{N} + C_{nb(1, 0)} vel_{E} + C_{nb(2, 0)} vel_{D}\\right) + agl \\omega_{by}\\right)\\end{matrix}\\right]$$"
       ],
       "text/plain": [
-       "⎡C_nb(2, 2)⋅(C_nb(0, 1)⋅vel_N + C_nb(1, 1)⋅vel_E)       ⎤\n",
-       "⎢──────────────────────────────────────────────── + ω_bx⎥\n",
-       "⎢                      agl                              ⎥\n",
-       "⎢                                                       ⎥\n",
-       "⎢C_nb(2, 2)⋅(C_nb(0, 0)⋅vel_N + C_nb(1, 0)⋅vel_E)       ⎥\n",
-       "⎢──────────────────────────────────────────────── + ω_by⎥\n",
-       "⎣                      agl                              ⎦"
+       "⎡ -C_nb(2, 2)⋅(C_nb(0, 1)⋅vel_N + C_nb(1, 1)⋅vel_E + C_nb(2, 1)⋅vel_D) + agl⋅ω\n",
+       "⎢ ────────────────────────────────────────────────────────────────────────────\n",
+       "⎢                                       agl                                   \n",
+       "⎢                                                                             \n",
+       "⎢-(C_nb(2, 2)⋅(C_nb(0, 0)⋅vel_N + C_nb(1, 0)⋅vel_E + C_nb(2, 0)⋅vel_D) + agl⋅ω\n",
+       "⎢─────────────────────────────────────────────────────────────────────────────\n",
+       "⎣                                       agl                                   \n",
+       "\n",
+       "_bx  ⎤\n",
+       "───  ⎥\n",
+       "     ⎥\n",
+       "     ⎥\n",
+       "_by) ⎥\n",
+       "─────⎥\n",
+       "     ⎦"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_flow.subs(sub_lin).subs(sub_agl)"
+    "y_flow_lin = y_flow.subs(sub_lin).subs(sub_agl).subs(sub_C_nb)\n",
+    "y_flow_lin.simplify()\n",
+    "y_flow_lin"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
@@ -498,36 +496,45 @@
      "text": [
       "Matrix<float, Y_flow::n, Xe::n> H;\n",
       "float x0 = 1/agl;\n",
-      "float x1 = 2*x0;\n",
-      "float x2 = C_nb(2, 1)*C_nb(2, 2);\n",
-      "float x3 = C_nb(0, 1)*vel_N + C_nb(1, 1)*vel_E;\n",
-      "float x4 = 2*C_nb(2, 2)*x0;\n",
-      "float x5 = C_nb(2, 2)*x0;\n",
-      "float x6 = C_nb(2, 2)/agl**2;\n",
-      "float x7 = x3*x6;\n",
-      "float x8 = C_nb(2, 0)*C_nb(2, 2);\n",
-      "float x9 = C_nb(0, 0)*vel_N + C_nb(1, 0)*vel_E;\n",
-      "float x10 = x6*x9;\n",
-      "H(Y_flow::flowX, Xe::rot_N) = x1*(C_nb(1, 2)*x3 - vel_E*x2);\n",
-      "H(Y_flow::flowX, Xe::rot_E) = x1*(-C_nb(0, 2)*x3 + vel_N*x2);\n",
-      "H(Y_flow::flowX, Xe::rot_D) = x4*(C_nb(0, 1)*vel_E - C_nb(1, 1)*vel_N);\n",
-      "H(Y_flow::flowX, Xe::vel_N) = C_nb(0, 1)*x5;\n",
-      "H(Y_flow::flowX, Xe::vel_E) = C_nb(1, 1)*x5;\n",
+      "float x1 = 2*C_nb(1, 2);\n",
+      "float x2 = C_nb(0, 1)*vel_N;\n",
+      "float x3 = C_nb(1, 1)*vel_E;\n",
+      "float x4 = 2*C_nb(2, 2)*vel_D;\n",
+      "float x5 = C_nb(2, 1)*vel_D;\n",
+      "float x6 = 2*C_nb(2, 2)*vel_E;\n",
+      "float x7 = 2*x0;\n",
+      "float x8 = C_nb(2, 2)*vel_D;\n",
+      "float x9 = C_nb(2, 2)*vel_N;\n",
+      "float x10 = 2*C_nb(2, 2)*x0;\n",
+      "float x11 = C_nb(2, 2)*x0;\n",
+      "float x12 = C_nb(2, 2)/agl**2;\n",
+      "float x13 = x12*(x2 + x3 + x5);\n",
+      "float x14 = C_nb(0, 0)*vel_N;\n",
+      "float x15 = C_nb(1, 0)*vel_E;\n",
+      "float x16 = C_nb(2, 0)*vel_D;\n",
+      "float x17 = x12*(x14 + x15 + x16);\n",
+      "H(Y_flow::flowX, Xe::rot_N) = x0*(-C_nb(1, 1)*x4 + C_nb(2, 1)*x6 - x1*x2 - x1*x3 - x1*x5);\n",
+      "H(Y_flow::flowX, Xe::rot_E) = x7*(C_nb(0, 1)*x8 + C_nb(0, 2)*x2 + C_nb(0, 2)*x3 + C_nb(0, 2)*x5 - C_nb(2, 1)*x9);\n",
+      "H(Y_flow::flowX, Xe::rot_D) = -x10*(C_nb(0, 1)*vel_E - C_nb(1, 1)*vel_N);\n",
+      "H(Y_flow::flowX, Xe::vel_N) = -C_nb(0, 1)*x11;\n",
+      "H(Y_flow::flowX, Xe::vel_E) = -C_nb(1, 1)*x11;\n",
+      "H(Y_flow::flowX, Xe::vel_D) = -C_nb(2, 1)*x11;\n",
       "H(Y_flow::flowX, Xe::gyro_bias_N) = -C_nb(0, 0);\n",
       "H(Y_flow::flowX, Xe::gyro_bias_E) = -C_nb(1, 0);\n",
       "H(Y_flow::flowX, Xe::gyro_bias_D) = -C_nb(2, 0);\n",
-      "H(Y_flow::flowX, Xe::asl) = -x7;\n",
-      "H(Y_flow::flowX, Xe::terrain_asl) = x7;\n",
-      "H(Y_flow::flowY, Xe::rot_N) = x1*(C_nb(1, 2)*x9 - vel_E*x8);\n",
-      "H(Y_flow::flowY, Xe::rot_E) = x1*(-C_nb(0, 2)*x9 + vel_N*x8);\n",
-      "H(Y_flow::flowY, Xe::rot_D) = x4*(C_nb(0, 0)*vel_E - C_nb(1, 0)*vel_N);\n",
-      "H(Y_flow::flowY, Xe::vel_N) = C_nb(0, 0)*x5;\n",
-      "H(Y_flow::flowY, Xe::vel_E) = C_nb(1, 0)*x5;\n",
-      "H(Y_flow::flowY, Xe::gyro_bias_N) = -C_nb(0, 1);\n",
-      "H(Y_flow::flowY, Xe::gyro_bias_E) = -C_nb(1, 1);\n",
-      "H(Y_flow::flowY, Xe::gyro_bias_D) = -C_nb(2, 1);\n",
-      "H(Y_flow::flowY, Xe::asl) = -x10;\n",
-      "H(Y_flow::flowY, Xe::terrain_asl) = x10;\n"
+      "H(Y_flow::flowX, Xe::asl) = x13;\n",
+      "H(Y_flow::flowX, Xe::terrain_asl) = -x13;\n",
+      "H(Y_flow::flowY, Xe::rot_N) = x0*(-C_nb(1, 0)*x4 + C_nb(2, 0)*x6 - x1*x14 - x1*x15 - x1*x16);\n",
+      "H(Y_flow::flowY, Xe::rot_E) = x7*(C_nb(0, 0)*x8 + C_nb(0, 2)*x14 + C_nb(0, 2)*x15 + C_nb(0, 2)*x16 - C_nb(2, 0)*x9);\n",
+      "H(Y_flow::flowY, Xe::rot_D) = -x10*(C_nb(0, 0)*vel_E - C_nb(1, 0)*vel_N);\n",
+      "H(Y_flow::flowY, Xe::vel_N) = -C_nb(0, 0)*x11;\n",
+      "H(Y_flow::flowY, Xe::vel_E) = -C_nb(1, 0)*x11;\n",
+      "H(Y_flow::flowY, Xe::vel_D) = -C_nb(2, 0)*x11;\n",
+      "H(Y_flow::flowY, Xe::gyro_bias_N) = C_nb(0, 1);\n",
+      "H(Y_flow::flowY, Xe::gyro_bias_E) = C_nb(1, 1);\n",
+      "H(Y_flow::flowY, Xe::gyro_bias_D) = C_nb(2, 1);\n",
+      "H(Y_flow::flowY, Xe::asl) = x17;\n",
+      "H(Y_flow::flowY, Xe::terrain_asl) = -x17;\n"
      ]
     }
    ],
@@ -538,34 +545,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$$\\left[\\begin{matrix}\\frac{C_{nb(2, 2)}}{agl} \\left(C_{nb(0, 1)} vel_{N} + C_{nb(1, 1)} vel_{E}\\right) + \\omega_{bx}\\\\\\frac{C_{nb(2, 2)}}{agl} \\left(C_{nb(0, 0)} vel_{N} + C_{nb(1, 0)} vel_{E}\\right) + \\omega_{by}\\end{matrix}\\right]$$"
-      ],
-      "text/plain": [
-       "⎡C_nb(2, 2)⋅(C_nb(0, 1)⋅vel_N + C_nb(1, 1)⋅vel_E)       ⎤\n",
-       "⎢──────────────────────────────────────────────── + ω_bx⎥\n",
-       "⎢                      agl                              ⎥\n",
-       "⎢                                                       ⎥\n",
-       "⎢C_nb(2, 2)⋅(C_nb(0, 0)⋅vel_N + C_nb(1, 0)⋅vel_E)       ⎥\n",
-       "⎢──────────────────────────────────────────────── + ω_by⎥\n",
-       "⎣                      agl                              ⎦"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_flow.subs(sub_lin).subs(sub_agl)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
